Fix blurriness with existing image-icon, inline bindings

--- a/editor/styling/stylesheets/components/_context-grid-menu.scss
+++ b/editor/styling/stylesheets/components/_context-grid-menu.scss
@@ -6,7 +6,7 @@
 }
 
 .grid-menu-item-enabled {
-    &:focused, {
+    &:focused {
         -fx-background-color: -df-component-lighter;
         -fx-text-fill: -df-text-selected;
     }
